Updated: Bugfix for github commit message alignment

--- a/ezpublish_legacy/extension/ezecosystem/design/eze/stylesheets/override.css
+++ b/ezpublish_legacy/extension/ezecosystem/design/eze/stylesheets/override.css
@@ -251,7 +251,7 @@ div.attribute-body.float-break div.details ul li div.message blockquote {
 display: inline;
 -webkit-margin-before: 1em;
 -webkit-margin-after: 1em;
--webkit-margin-start: 22px;
+-webkit-margin-start: 12px;
 -webkit-margin-end: 40px;
 }
 
